controllers/refresolver/gatewayapigrpcroute/testdata/gatewayapi_grpcroute_backend_with_namespace.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gatewayapi-httproute
  namespace: test-gslb
spec:
  parentRefs:
    - name: gatewayapi-gateway
  hostnames:
    - gatewayapi-grpcroute.cloud.example.com
  rules:
    - backendRefs:
        - name: gatewayapi-grpcroute-service
          namespace: test-backend
          port: 8080
