controllers/refresolver/gatewayapigrpcroute/testdata/gatewayapi_grpcroute_multiple_hostnames.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: gatewayapi-grpcroute
  namespace: test-gslb
spec:
  parentRefs:
  - name: gatewayapi-gateway
  hostnames:
  - gatewayapi-grpcroute1.cloud.example.com
  - gatewayapi-grpcroute2.cloud.example.com
  rules:
  - backendRefs:
    - name: gatewayapi-grpcroute-service
      port: 8080
